--- a/blueprints/automation/WeaselADHD/push_notification_motion_event.yaml
+++ b/blueprints/automation/WeaselADHD/push_notification_motion_event.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: UniFi Protect Motion Notifications (old)
+  name: UniFi Protect Motion Notifications (WV)
   domain: automation
   source_url: https://raw.githubusercontent.com/AngellusMortis/unifiprotect_blueprints/main/blueprints/automation/unifiprotect/push_notification_motion_event.yaml
   description: "## UniFi Protect Motion Notifications\n\nThis blueprint will send
