--- a/.github/workflows/home_assistant.yml
+++ b/.github/workflows/home_assistant.yml
@@ -19,7 +19,7 @@ jobs:
         uses: frenck/action-yamllint@v1.4
 
   remarklint:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: ⤵️ Check out configuration from GitHub
         uses: actions/checkout@v3
