--- a/views/summary.yaml
+++ b/views/summary.yaml
@@ -35,9 +35,9 @@ cards:
               today_at('5:00') %}Good morning{% else %}Good night{%
               endif %}, {{ user }}.
 
-          - type: 'custom:layout-card'
-            layout_type: 'custom:horizontal-layout'
-            view_layout:
+          - type: custom:layout-card
+            layout_type: custom:horizontal-layout
+            # view_layout:
             place-self: center
             layout:
               width: 220
@@ -46,15 +46,15 @@ cards:
               - type: horizontal-stack
                 cards:
 
-              - type: 'custom:mushroom-person-card'
-                entity: person.wesley
-                style: 'ha-card {background: none;}'
-                use_entity_picture: true
+                  - type: 'custom:mushroom-person-card'
+                    entity: person.wesley
+                    style: 'ha-card {background: none;}'
+                    use_entity_picture: true
 
-              - type: 'custom:mushroom-person-card'
-                entity: person.fenne
-                style: 'ha-card {background: none;}'
-                use_entity_picture: true
+                  - type: 'custom:mushroom-person-card'
+                    entity: person.fenne
+                    style: 'ha-card {background: none;}'
+                    use_entity_picture: true
 
       # Summary
       # [Column] Left
