--- a/integrations/history.yaml
+++ b/integrations/history.yaml
@@ -1,21 +1,21 @@
 ---
 # History
 history:
-  exclude:
-    domains:
-      - automation
-      - updater
-    entities:
-      - sensor.last_boot
-      - sensor.date
-      - sensor.date_time
-      - sensor.date_time_iso
-      - sensor.time
-      - sensor.time_date
-      - sensor.time_utc
-      - sensor.last_boot_date_time
-      - sensor.internet_time
-      - sensor.iphone_sim_1
-      - sensor.iphone_wv_sim_1
-      - sensor.iphone_wv_sim_2
-      - sensor.local_ip
+#  exclude:
+#    domains:
+#      - automation
+#      - updater
+#    entities:
+#      - sensor.last_boot
+#      - sensor.date
+#      - sensor.date_time
+#      - sensor.date_time_iso
+#      - sensor.time
+#      - sensor.time_date
+#      - sensor.time_utc
+#      - sensor.last_boot_date_time
+#      - sensor.internet_time
+#      - sensor.iphone_sim_1
+#      - sensor.iphone_wv_sim_1
+#      - sensor.iphone_wv_sim_2
+#      - sensor.local_ip
