--- a/views/columns/environment/comfort.yaml
+++ b/views/columns/environment/comfort.yaml
@@ -4,21 +4,21 @@
     - type: horizontal-stack
       cards:
         - type: entity
-          entity: sensor.lbl_16_aw_apparent_temperature
+          entity: sensor.
           name: Dry Bulb
           icon: none
           card_mod:
             style: |
               ha-card {background: none;}
         - type: entity
-          entity: sensor.lbl_16_aw_wet_bulb_temperature
+          entity: sensor.wupws
           name: Wet Bulb
           icon: none
           card_mod:
             style: |
               ha-card {background: none;}
         - type: entity
-          entity: sensor.lbl_16_aw_dew_point
+          entity: sensor.wupws_dewpt
           name: Dew Point
           icon: none
           card_mod:
