--- a/automations.yaml
+++ b/automations.yaml
@@ -164,12 +164,15 @@
   alias: UniFi Protect Dynamic Doorbell
   description: ''
   use_blueprint:
-    path: AngellusMortis/dynamic_doorbell.yaml
+    path: WeaselADHD/push_notification_doorbell_event.yaml
     input:
-      doorbell: select.uvc_g4_doorbell_doorbell_text
-      temp_entity: sensor.wupws_temp
-      text_template: Welcome | {ctime} | {temp}
+      doorbell: binary_sensor.uvc_g4_doorbell_doorbell
+      notify_telegram: wesley_telegram
+      send_telegram: true
       time_format: '%H:%M'
+      base_ha_url: https://ha.weaselweb.nl/
+      send_mobile: false
+      base_image_url: https://ha.weaselweb.nl/
 - id: '1658263288463'
   alias: Windows open warning
   description: Sends notification to open windows. Triggered the first time each day
@@ -332,17 +335,16 @@
     path: AngellusMortis/notification_ring_event.yaml
     input:
       doorbell_sensor:
-      - binary_sensor.doorbell_uvc_g4_doorbell
+      - binary_sensor.uvc_g4_doorbell_doorbell
       time_format: '%H:%M'
-      cooldown: 60
-      lovelace_view: https://ha.weaselweb.nl/lovelace
-      notify_target_app: notify.wesley_telegram
-- id: '1679057691753'
-  alias: UniFi Protect Dynamic Doorbell (old)
+      notify_target_app: notify.mobile_app_6d34f062b6c1898ca60db74f88c562e6
+- id: '1690491654908'
+  alias: UniFi Protect Doorbell Ring Notifications
   description: ''
   use_blueprint:
-    path: WeaselADHD/dynamic_doorbell.yaml
+    path: AngellusMortis/notification_ring_event.yaml
     input:
-      doorbell: sensor.uvc_g4_doorbell_doorbell_text
-      temp_entity: sensor.wupws_temp
-      text_template: Welcome | {ctime} | {temp}
+      doorbell_sensor:
+      - binary_sensor.uvc_g4_doorbell_doorbell
+      time_format: '%H:%M'
+      notify_target_app: notify.mobile_app_6d34f062b6c1898ca60db74f88c562e6
