Sensor changes + http changes

--- a/.stubs/ci_secrets.yaml
+++ b/.stubs/ci_secrets.yaml
@@ -40,10 +40,10 @@ ip_tv: 000.000.0.000
 tv_mac_address: xxxxxx
 
 # vacuum
-ip_vacuum: 000.000.0.000
-vacuum_token: XX0000000000000000000XXXXXXXXXXX
-xiaomi_username: xxxxxxxxx
-xiaomi_password: xxxxxxxxx
+xiaomi_vacuum_host: 000.000.0.000
+xiaomi_vacuum_token: XX0000000000000000000XXXXXXXXXXX
+xiaomi_vacuum_username: xxxxxxxxx
+xiaomi_vacuum_password: xxxxxxxxx
 
 # mariadb url
 maria_db_url: xxxxxx
