--- a/views/columns/summary/summary_midright.yaml
+++ b/views/columns/summary/summary_midright.yaml
@@ -1,6 +1,30 @@
+- type: custom:hui-markdown-card
+  content: |
+    {{ states('sensor.active_devices') }}
+
+- entities:
+    - entities:
+        - entity: light.living_room
+          type: custom:slider-entity-row
+        - entity: light.middle_room
+          type: custom:slider-entity-row
+        - entity: light.kitchen
+          type: custom:slider-entity-row
+        - entity: light.dining_room
+          type: custom:slider-entity-row
+      head: light.downstairs
+      type: custom:fold-entity-row
+    - entities:
+        - entity: light.study_light
+          type: custom:slider-entity-row
+        - entity: light.bedroom_light
+          type: custom:slider-entity-row
+      head: light.upstairs
+      type: custom:fold-entity-row
+  type: entities
+
 - cards:
-    - color: rgb(249, 42, 173)
-      entity: binary_sensor.activity_in_hallway
+    - entity: binary_sensor.activity_in_hallway
       icon: mdi:door
       name: Hallway
       state:
@@ -10,8 +34,7 @@
           - font-size: 12px
           - height: 100px
       type: custom:button-card
-    - color: rgb(249, 42, 173)
-      entity: binary_sensor.activity_in_living_room
+    - entity: binary_sensor.activity_in_living_room
       icon: mdi:sofa
       name: Living Room
       state:
@@ -21,8 +44,7 @@
           - font-size: 13px
           - height: 100px
       type: custom:button-card
-    - color: rgb(249, 42, 173)
-      entity: binary_sensor.activity_in_study_room
+    - entity: binary_sensor.activity_in_study_room
       icon: mdi:desk
       name: Study
       state:
@@ -32,8 +54,7 @@
           - font-size: 13px
           - height: 100px
       type: custom:button-card
-    - color: rgb(249, 42, 173)
-      entity: binary_sensor.activity_in_landing
+    - entity: binary_sensor.activity_in_landing
       icon: mdi:stairs
       name: Landing
       state:
@@ -44,6 +65,7 @@
           - height: 100px
       type: custom:button-card
   type: horizontal-stack
+
 - entity: media_player.spotify_weaseladhd
   hide:
     power_state: true
@@ -59,14 +81,16 @@
   source: full
   sound_mode: icon
   artwork: cover
+
 - entities:
-    - sensor.plex_truenas_mediaserver
+    - sensor.plex_wv_plex
   font_size: 60
   height: 62
   hours_to_show: 168
   name: Plex
   points_per_hour: 0.25
   type: custom:mini-graph-card
+
 - type: conditional
   conditions:
     - entity: media_player.plex_plex_web_firefox_2
@@ -76,6 +100,7 @@
   card:
     type: media-control
     entity: media_player.plex_plex_web_firefox_2
+
 - card:
     entity: media_player.plex_plex_for_lg_lg_oled65c9pla
     type: media-control
@@ -85,8 +110,9 @@
     - entity: media_player.plex_plex_for_lg_lg_oled65c9pla
       state_not: unavailable
   type: conditional
+
 - card:
-    entity: media_player.plex_xfenne_hotmail_com_plex _for_ios_iphone
+    entity: media_player.plex_xfenne_hotmail_com_plex_for_ios_iphone
     type: media-control
   conditions:
     - entity: media_player.plex_xfenne_hotmail_com_plex_for_ios_iphone
@@ -94,6 +120,7 @@
     - entity: media_player.plex_xfenne_hotmail_com_plex_for_ios_iphone
       state_not: idle
   type: conditional
+
 - card:
     type: media-control
     entity: media_player.plex_plex_web_firefox_windows
@@ -101,6 +128,7 @@
     - entity: media_player.plex_plex_web_firefox_windows
       state_not: unavailable
   type: conditional
+
 - icon: mdi:television
   name: LG TV
   type: custom:mini-media-player
@@ -110,6 +138,7 @@
   artwork: cover
   info: short
   entity: media_player.living_room_tv
+
 - icon: mdi:apple
   name: Apple TV
   type: custom:mini-media-player
@@ -121,14 +150,19 @@
   source: icon
   sound_mode: icon
   entity: media_player.downstairs
+
 - icon: mdi:speaker-multiple
   name: Denon AVR X1700H
   type: custom:mini-media-player
   volume_stateless: false
   group: false
   entity: media_player.denon_avr_x1700h
-- aspect_ratio: 50%
+
+- show_state: true
+  show_name: true
+  camera_view: auto
+  aspect_ratio: 50%
   camera_image: camera.uvc_g3_pro_front
-  entity: camera.uvc_g3_pro_front
   name: UVC G3 Pro Front
   type: picture-entity
+  entity: camera.uvc_g3_pro_front_high
