--- a/views/environment.yaml
+++ b/views/environment.yaml
@@ -38,7 +38,7 @@ cards:
               # Environment
 
               Inside it is {{ states('sensor.thermal_comfort_living_room_simmerzone') | regex_replace(find='_', replace=' ') | lower }}
-              at {{states('sensor.downstairs_avg_temperature')}}°C and it is {{ states('sensor.thermal_comfort_living_room_perception') | regex_replace(find='_', replace=' ') | lower }} at
+              at {{states('sensor.avg_temp_downstairs')}}°C and it is {{ states('sensor.thermal_comfort_living_room_perception') | regex_replace(find='_', replace=' ') | lower }} at
               {{states('sensor.indoor_avg_humidity')}}%.
               Outside it is {{ states('sensor.thermal_comfort_outside_simmerzone') | regex_replace(find='_', replace=' ') | lower }}
               at {{states('sensor.br_temperature') }}°C and it is {{ states('sensor.thermal_comfort_outside_perception') | regex_replace(find='_', replace=' ') | lower }} at
